test/variable/collide_with_parameter.lox
fn foo(a) {
  var a // error: already declared variable in this scope
}
